--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -8,24 +8,25 @@
     android:orientation="vertical"
     android:background="@color/white">
 
+    <TextView
+        android:id="@+id/text_chat_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="채팅"
+        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_chat_rooms"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_weight="0"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-
-    <Button
-        android:id="@+id/startChat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="새로운 채팅 시작"
-        android:textColor="@color/white"/>
 
 </LinearLayout>
