--- a/app/src/main/res/layout/chatroomitem.xml
+++ b/app/src/main/res/layout/chatroomitem.xml
@@ -33,6 +33,13 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/hideRealRoomName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:text="TextView" />
+
+        <TextView
             android:id="@+id/lastMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
