--- a/app/src/main/res/layout/chatroomitem.xml
+++ b/app/src/main/res/layout/chatroomitem.xml
@@ -5,8 +5,8 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/profile"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/chatRoomprofile"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:src="@drawable/profile"/>
