--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -29,13 +29,14 @@
                 android:padding="8dp"/>
 
             <TextView
+                android:id="@+id/editPostTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="심부름 등록"
+                android:text="판매 입찰"
                 android:textSize="20sp"
 
-                android:layout_marginLeft="80dp"
+                android:layout_marginLeft="90dp"
                 android:layout_gravity="center_vertical"
                 />
         </LinearLayout>
@@ -100,7 +101,6 @@
                 android:padding="10dp"/>
         </LinearLayout>
 
-        <!-- 심부름비 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -112,8 +112,84 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="심부름비"
+                android:text="거래방식을 선택하세요"
+                android:layout_gravity="center_horizontal"
+                android:textStyle="bold"
                 android:textSize="18sp"/>
+
+            <!-- 새로운 LinearLayout 추가 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:orientation="horizontal">
+
+                <android.widget.Button
+                    android:id="@+id/bidButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="판매 입찰"
+                    android:layout_marginStart="100dp"
+
+                    android:background="@drawable/green_button"
+                    android:layout_marginEnd="8dp"
+                />
+
+                <!-- 바로 거래 버튼 추가 -->
+                <android.widget.Button
+                    android:id="@+id/sellButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="바로 판매"
+                    android:background="@drawable/gray_button"
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
+
+            <TextView
+                android:id="@+id/bidPriceTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="최저입찰가"
+                android:textSize="18sp"/>
+
+            <EditText
+                android:id="@+id/bidPriceEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="₩ 최저입찰가를 입력하세요."
+                android:background="@drawable/edittext_bg"
+                android:padding="10dp"
+                android:inputType="number" />
+        </LinearLayout>
+
+
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
+
+            <TextView
+                android:id="@+id/priceTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="즉시판매가"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/priceEditText"
@@ -123,7 +199,57 @@
                 android:background="@drawable/edittext_bg"
                 android:padding="10dp"
                 android:inputType="number" />
+
+            <TextView
+                android:id="@+id/warningLow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                android:visibility="gone"
+                android:text="최저입찰가보다 즉시판매가가 같거나 낮습니다."
+                ></TextView>
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
+
+            <TextView
+                android:id="@+id/deadLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="입찰 마감기한"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/deadLineTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="1일 (2024/04/27 마감)"
+                android:background="@color/white"
+                android:padding="10dp"
+                android:textSize="17dp"
+                android:inputType="number"
+                android:layout_below="@id/deadLine"
+                android:layout_toStartOf="@+id/downButtonImageView" />
+
+            <ImageView
+                android:id="@+id/downButtonImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/ic_downbutton"
+                android:layout_alignTop="@id/deadLineTextView"
+                android:layout_alignParentEnd="true"
+                android:foregroundGravity="center_vertical"
+
+               />
+
+        </RelativeLayout>
+
 
         <!-- 자세한 설명 -->
         <LinearLayout
