--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -80,9 +80,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                app:backgroundTint="@color/pastel_green"
+                app:backgroundTint="@color/browser_actions_bg_grey"
                 android:layout_margin="16dp"
-                android:src="@drawable/ic_addpostbutton" />
+                android:src="@drawable/whitepostbutton" />
 
         </FrameLayout>
 
