--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,21 +5,23 @@
     <item
         android:id="@+id/bottom_home"
         android:enabled="true"
-        android:icon="@drawable/ic_home_foreground"
+        android:icon="@drawable/ic_home"
         android:title="홈" />
 
     <item
         android:id="@+id/bottom_chat"
         android:enabled="true"
         android:title="채팅"
-        android:icon="@drawable/ic_chat_foreground"
+        android:icon="@drawable/sendbutton"
         />
 
     <item
 
-        android:id="@+id/bottom_add"
+        android:id="@+id/bottom_wish"
         android:enabled="true"
-        android:title="심부름 등록"
+        android:title="위시리스트"
+
+        android:icon="@drawable/ic_bottomheart"
 
         />
 
@@ -27,6 +29,6 @@
         android:id="@+id/bottom_mypage"
         android:enabled="true"
         android:title="마이페이지"
-        android:icon="@drawable/ic_mypage_foreground"
+        android:icon="@drawable/ic_mypage"
         />
 </menu>
