4/27일 - UI 현재입찰가, 남은 시간 (CountDown)식으로 표현 (서버 쪽에서 남은 시간 24시간 미만은 데이터 잘보내주는데 그 이상은 잘안오는 문제있음) 3일 23시간 이런식으로 할 예정

--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -232,7 +232,7 @@
                 android:background="@color/white"
                 android:padding="10dp"
                 android:textSize="17dp"
-                android:inputType="number"
+
                 android:layout_below="@id/deadLine"
                 android:layout_toStartOf="@+id/downButtonImageView" />
 
@@ -278,6 +278,7 @@
                 android:id="@+id/descriptionEditText"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:gravity="top"
                 android:hint="자세한 설명을 입력하세요"
                 android:background="@drawable/edittext_bg"
                 android:padding="10dp"/>
