--- a/app/src/main/res/layout/postitem.xml
+++ b/app/src/main/res/layout/postitem.xml
@@ -1,5 +1,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -39,10 +40,23 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        app:layout_constraintEnd_toStartOf="@+id/remainingTimeTextView"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="8dp"/>
 
+    <!-- 남은 시간 -->
+    <TextView
+        android:id="@+id/remainingTimeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="남은 시간"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@+id/productTitle"
+        app:layout_constraintBottom_toBottomOf="@+id/productTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"/>
     <!-- 지역 -->
     <TextView
         android:id="@+id/locationTextView"
@@ -71,19 +85,24 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"/>
 
-    <!-- 가격 -->
+
+
     <TextView
-        android:id="@+id/priceTextView"
+        android:id="@+id/biddingPriceTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="가격"
-        android:textSize="14sp"
+        android:text="현재 입찰가"
+        android:textSize="22sp"
+        android:visibility="visible"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/timeTextView"
         app:layout_constraintStart_toEndOf="@+id/cardView"
-        app:layout_constraintEnd_toEndOf="parent"
+
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+        android:layout_marginEnd="8dp"/>
+
+
 
     <TextView
         android:id="@+id/usernameTextView"
@@ -99,6 +118,21 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
 
+
+    <TextView
+        android:id="@+id/priceTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:text="즉시 구매가"
+        android:textSize="14sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/biddingPriceTextView" />
+
     <!-- 아이템 뷰의 하단 수평선 -->
     <View
         android:id="@+id/horizontalDivider"
@@ -109,5 +143,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
