--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="160dp"
         android:text="Daily Deliver"
-        android:src="@drawable/applogo"
+        android:src="@drawable/ic_appmarket"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
