4월 30일 오전한일 - 홈 프래그먼트 리사이클러뷰 아이템 재활용 잘 안되어서 타이머쪽 버그 났던부분 수정 완료 - 입찰쪽에서 버그 났던 부분 수정 완료

--- a/app/src/main/res/layout/postitem.xml
+++ b/app/src/main/res/layout/postitem.xml
@@ -31,12 +31,12 @@
             android:scaleType="centerCrop"
             android:src="@drawable/rocketlogo"/>
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/stickerImageView"
             android:layout_width="38dp"
             android:layout_height="38dp"
             android:visibility="gone"
-            android:src="@drawable/ic_sticker"
+            android:src="@drawable/ic_hammer"
             app:layout_constraintStart_toStartOf="@+id/cardView"
             app:layout_constraintTop_toTopOf="@+id/cardView"
             android:layout_marginStart="3dp"
