--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -243,7 +243,7 @@ tools:context=".Fragment.EditPostActivity">
             android:hint="1일 (2024/04/27 마감)"
             android:background="@color/white"
             android:padding="10dp"
-            android:textSize="17dp"
+            android:textSize="19dp"
 
             android:layout_below="@id/deadLine"
             android:layout_toStartOf="@+id/downButtonImageView" />
@@ -251,9 +251,9 @@ tools:context=".Fragment.EditPostActivity">
         <ImageView
             android:id="@+id/downButtonImageView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
-            android:src="@drawable/ic_downbutton"
+            android:src="@drawable/ic_down"
             android:layout_alignTop="@id/deadLineTextView"
             android:layout_alignParentEnd="true"
             android:foregroundGravity="center_vertical"
