--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -194,6 +194,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="입찰하기"
+                    android:textColor="@color/white"
                     android:id="@+id/bidUpdateToServerButton"
                     android:background="@drawable/green_button"
                     android:layout_gravity="end"
@@ -205,7 +206,8 @@
                 <android.widget.Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="구매 하기"
+                    android:text="구매하기"
+                    android:textColor="@color/white"
                     android:visibility="gone"
                     android:id="@+id/immediateBuyToServerButton"
                     android:background="@drawable/green_button"
@@ -317,6 +319,7 @@
         <!-- 채팅 버튼 -->
         <android.widget.Button
             android:id="@+id/chatButton"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
