뷰 초기화 시 데이터 꼬임 현상 해결
해야할일 입찰쪽 시간다지났을때 마지막입찰가, 입찰자 아이디 보여주기, 카카오페이 해야함 크킄

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -48,11 +48,10 @@
                 <!-- CircleImageView와 닉네임, 위치를 담는 수평 LinearLayout -->
 
                 <!-- 제목 텍스트뷰 -->
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:gravity="center_vertical"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <!-- CircleImageView -->
@@ -67,6 +66,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_toEndOf="@id/profileImageView"
                         android:orientation="vertical">
 
                         <!-- 닉네임 텍스트뷰 -->
@@ -89,10 +89,28 @@
                             android:textSize="16sp" />
                     </LinearLayout>
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
-                </LinearLayout>
+                    <!-- Unlike 버튼 -->
+                    <ImageButton
+                        android:id="@+id/unlikeButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@color/white"
+                        android:src="@drawable/ic_unlikebutton" />
+
+                    <ImageButton
+                        android:id="@+id/likeButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@color/white"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_likebutton" />
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/titleTextView"
