--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -80,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                app:backgroundTint="@color/browser_actions_bg_grey"
+                app:backgroundTint="@color/carrot"
                 android:layout_margin="16dp"
                 android:src="@drawable/whitepostbutton" />
 
