--- a/app/src/main/res/layout/postitem.xml
+++ b/app/src/main/res/layout/postitem.xml
@@ -31,6 +31,20 @@
             android:scaleType="centerCrop"
             android:src="@drawable/rocketlogo"/>
 
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/soldOutImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_soldout"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/cardView"
+            app:layout_constraintEnd_toEndOf="@+id/cardView"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/cardView"
+            app:layout_constraintTop_toTopOf="@+id/cardView"
+            app:layout_constraintVertical_bias="0.5" />
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/stickerImageView"
             android:layout_width="38dp"
