--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="colorPrimary">#1976D2</color>
     <color name="pastel_green">#98FB98</color>
     <color name="red">#FF0000</color>
+    <color name="carrot">#FF9614</color>
 
 </resources>
