--- a/app/src/main/res/color/color_selected.xml
+++ b/app/src/main/res/color/color_selected.xml
@@ -1,7 +1,7 @@
 <!-- pastel_green.xml -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true"
-        android:color="#3AB53F" />
+        android:color="#FF9614" />
 
     <item android:state_checked="false"
         android:color="#777777" />
