--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="TransparentButton">
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:layout_marginTop">8dp</item> <!-- 버튼 간의 간격 조절 -->
-        <item name="android:gravity">center</item>
-
-
-
-
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
     </style>
-
 </resources>
