--- a/app/src/main/res/layout/activity_edit_post.xml
+++ b/app/src/main/res/layout/activity_edit_post.xml
@@ -12,10 +12,9 @@ tools:context=".Fragment.EditPostActivity">
     android:orientation="vertical">
 
     <!-- 제목 부분 -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp">
@@ -26,20 +25,20 @@ tools:context=".Fragment.EditPostActivity">
             android:layout_height="50dp"
             android:src="@drawable/backbutton_foreground"
             android:background="@color/white"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:layout_alignParentStart="true"/>
 
         <TextView
             android:id="@+id/editPostTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:text="판매 입찰"
             android:textSize="20sp"
-
-            android:layout_marginLeft="90dp"
-            android:layout_gravity="center_vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             />
-    </LinearLayout>
+    </RelativeLayout>
+
 
     <!-- 이미지뷰와 리사이클러뷰 -->
     <LinearLayout
