--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -18,36 +18,33 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/relativeRegister"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:gravity="center_vertical">
 
             <ImageButton
                 android:id="@+id/backbtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:layout_gravity="start"
+                android:layout_alignParentStart="true"
                 android:background="@color/white"
                 android:contentDescription="뒤로가기 버튼"
                 android:padding="7dp"
-                android:src="@drawable/backbutton_foreground"></ImageButton>
-
+                android:src="@drawable/backbutton_foreground" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="회원가입"
-                android:gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:textSize="20sp"
-                android:layout_marginEnd="20dp"
-                android:textColor="@android:color/black"
-                android:layout_gravity="center_vertical"/>
+                android:textColor="@android:color/black" />
+        </RelativeLayout>
 
 
-            />
-        </LinearLayout>
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -235,7 +232,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/phoneNumber"
+                    android:id="@+id/phoneNumberEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="phone"
@@ -244,7 +241,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/phoneNumberCheck"
+                android:id="@+id/phoneNumberCheckButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="인증 확인"
@@ -263,14 +260,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:visibility="gone"
+                android:id="@+id/confirmPhoneNumberLayout"
                 android:hint="인증번호를 입력하세요"
                 app:boxStrokeColor="@color/carrot"
                 app:hintTextColor="@color/carrot"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/checkPhoneNumberEditText"
+                    android:id="@+id/confirmPhoneNumberEditText"
                     android:layout_width="match_parent"
+                    android:visibility="gone"
                     android:layout_height="wrap_content"
                     android:inputType="phone"
                     android:padding="10dp" />
@@ -278,9 +278,11 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/checkPhoneNumberButton"
+                android:id="@+id/confirmPhoneNumberButton"
                 android:layout_width="wrap_content"
+
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:text="확인"
                 android:layout_marginStart="8dp"
                 app:backgroundTint="@color/carrot"
