--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/swiperefreshlayout"
     android:layout_height="match_parent"
-    tools:context=".Activity.MainActivity">
+    tools:context=".WishListFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             android:layout_weight="1">
 
             <ProgressBar
-                android:id="@+id/homeProgressBar"
+                android:id="@+id/wishProgressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -29,7 +29,7 @@
 
             <!-- 리사이클러뷰 -->
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/productRecyclerView"
+                android:id="@+id/wishProductRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="72dp"
@@ -49,24 +49,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="동네"
+                    android:text="위시리스트"
                     android:textSize="20sp"
                     android:textColor="@android:color/black" />
 
-                <!-- 검색 아이콘 -->
-                <ImageView
-                    android:id="@+id/search"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_search"
-                    android:layout_marginEnd="16dp" />
 
-                <!-- 알림 아이콘 -->
-                <ImageView
-                    android:id="@+id/notification"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_notification" />
+
+
 
             </LinearLayout>
 
@@ -74,15 +63,7 @@
 
 
 
-            <!-- 플로팅 액션 버튼 -->
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/postButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                app:backgroundTint="@color/carrot"
-                android:layout_margin="16dp"
-                android:src="@drawable/whitepostbutton" />
+
 
         </FrameLayout>
 
