--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -19,6 +19,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"/>
 
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_chat_rooms"
         android:layout_width="match_parent"
@@ -28,5 +30,18 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    <ImageView
+        android:id="@+id/chatBlankImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:background="@color/white"
+        app:srcCompat="@drawable/ic_blankpost" />
+
+
 
 </LinearLayout>
