--- a/app/src/main/res/layout/bottomdialog.xml
+++ b/app/src/main/res/layout/bottomdialog.xml
@@ -15,11 +15,12 @@
         android:gravity="center_horizontal"
         android:background="?android:attr/selectableItemBackground"
         android:layout_marginBottom="16dp"
-        android:onClick="onCameraClick">
+        >
 
         <ImageView
             android:id="@+id/camera"
-            android:layout_width="383dp"
+            android:layout_width="match_parent"
+            android:onClick="onCameraClick"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginEnd="8dp"
@@ -34,7 +35,7 @@
 
         <ImageView
             android:id="@+id/album"
-            android:layout_width="371dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginEnd="8dp"
