--- a/app/src/main/res/layout/activity_daum_address.xml
+++ b/app/src/main/res/layout/activity_daum_address.xml
@@ -5,11 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_gravity="center"
     tools:context=".Activity.DaumAddressActivity">
 
     <!--상단 툴바-->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        android:layout_gravity=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -19,10 +21,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:textStyle="bold"
             android:layout_marginRight="10dp"
+            android:layout_gravity="center"
 
             android:text="우편번호 검색"
-            android:textSize="23dp"></TextView>
+            android:textSize="25dp"></TextView>
 
     </androidx.appcompat.widget.Toolbar>
 
